--- a/Practica_d3_def_EVA_1.html
+++ b/Practica_d3_def_EVA_1.html
@@ -10,6 +10,6 @@
 	<body>
 		<div></div>
 
-		<script src="practica_d3_def-1 copy.js"></script>
+		<script src="practica_d3_def_EVA_1.js"></script>
 	</body>
 </html>
