--- a/A_opcionUnBarrio.html
+++ b/A_opcionUnBarrio.html
@@ -10,6 +10,6 @@
 	<body>
 		<div></div>
 
-		<script src="practica_d3_def_EVA_1.js"></script>
+		<script src="A_opcionUnBarrio.js"></script>
 	</body>
 </html>
